changed html description and solved issue with negative inputs in web browser

--- a/templates/plot_template.html
+++ b/templates/plot_template.html
@@ -22,6 +22,7 @@
             border-radius: 4px;
             padding: 5px;
             width: 80%;
+            width: 50%; /* Adjusted to 50% */
         }
         .container {
             background-color: white;
@@ -34,8 +35,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>My Data Plot</h1>
-        <p>This plot represents the data from 'your_data_file.txt'. It illustrates ... [Add your explanatory text here]</p>
+        <h1>Power consumed</h1>
+        <p>Here is shown the power consumed by the refrigerator </p>
         <img id="plotImage" src="/plot" alt="My Plot">
     </div>
 
